--- a/client/src/components/projectcard/ProjectCard.css
+++ b/client/src/components/projectcard/ProjectCard.css
@@ -214,7 +214,7 @@
         margin-bottom: 3rem
     }
 
-    .slick-dots li button{
+    .project .slick-dots li button{
         background-color: var(--blue) !important
     }
 }
