--- a/client/src/components/projectdesc/ProjectDesc.css
+++ b/client/src/components/projectdesc/ProjectDesc.css
@@ -41,3 +41,12 @@
     gap: 0.2rem;
     padding-top: 0.2rem;
 }
+
+@media only screen and (max-width: 950px) {
+    .project-desc .banner {
+        display: none;
+    }
+    .project-desc .info {
+        width: 100%
+    }
+}
