--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,6 +31,7 @@
     --blue: #08254C;
     --cyan: #46A29F;
     --navbar-color: rgba(255, 255, 255, 0.15);
+    --slickdot: var(--cyan);
 
     --mix-background: linear-gradient(90deg, #6083B4 0%, var(--cyan) 100%);
     --blue-background: linear-gradient(90deg, #08254C 0%, #31517C 100%);
